fabrique-derive/tests/ui/invalid_referenced_key_type.stderr
error: Unexpected type `int` at referenced_key
 --> tests/ui/invalid_referenced_key_type.rs:4:1
  |
4 | / struct Anvil {
5 | |     #[fabrique(relation = "Hammer", referenced_key = 123)]
6 | |     hammer_id: u32,
7 | |     weight: u32,
8 | | }
  | |_^
