fabrique-derive/tests/ui/invalid_referenced_key_type.rs
use fabrique_derive::Factory;

#[derive(Factory)]
struct Anvil {
    #[fabrique(relation = "Hammer", referenced_key = 123)]
    hammer_id: u32,
    weight: u32,
}

fn main() {}